hphp/test/zend/good/ext/gd/tests/png2wbmp_error2.php.skipif
<?php 
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('png2wbmp')) {
    die('skip png2wbmp function is not available');
}
?>