hphp/test/zend/bad/ext/gd/tests/imagecolorallocate_error.php.skipif
<?php
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
?> 